src/objects/Customer_Satisfaction_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat unsatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Friendly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfriendly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Satisfaction Survey</label>
    <nameField>
        <label>Customer Satisfaction Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>